# nix-airflow-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  setup.cfg  shell.nix
nix-airflow-template/: airflow.cfg  unittests.cfg
nix-airflow-template/dags/: hello_world.py
postgres/: Makefile
